large code push

--- a/analysis/adjusted_dk_points_gained_sim.Rmd
+++ b/analysis/adjusted_dk_points_gained_sim.Rmd
@@ -12,67 +12,20 @@ knitr::opts_chunk$set(echo = TRUE)
 # Load Libraries
 ```{r}
 
-library(plotly)
 
 source(file = "simulation_scripts/adj_dk_points_gained_sim_script.R")
 
 plan(multisession, workers = 4)
 
-
-
-theme_set(theme_minimal())
-
-dk_past_results <- 
-  read_csv("dk_past_results.csv") %>% 
-  janitor::clean_names() %>% 
-  mutate(date = mdy(date)) %>% 
-  filter(date %>% between(left = ymd("2019-01-13"), right = ymd("2019-08-25")))
-```
-
-# Remove Tournaments - that are non-cut events or three-day cut event
-```{r}
-dk_past_results <- 
-  dk_past_results %>% 
-  filter(!tournament_id %in% c(401056511, 401056514, 401056516, 401056542, 401056559, 401056543 ))
 ```
 
 # Pull tournament to sim
 ```{r}
-
-tournaments_to_sim <- 
-  dk_past_results %>% 
-  select(tournament_id, date) %>% 
-  mutate(date = date - days(4)) %>% 
-  distinct()
-
-tournament_ids <- 
-  tournaments_to_sim %>% 
-  pull(tournament_id)
-
-tournament_dates <- 
-  tournaments_to_sim %>% 
-  pull(date)
-
-get_tournament_players <- function(df, tid) {
-  
-  df %>%
-    filter(tournament_id %in% c(tid)) %>%
-    pull(player)
-  
-}
-
-tournament_players_tbl <-
-  map(tournament_ids, ~ get_tournament_players(dk_past_results, .x)) %>% 
-  enframe(value = "players") %>% 
-  bind_cols(tournament_id = tournament_ids, date = tournament_dates) %>% 
-  unnest(players) %>% 
-  nest(-name)
-
-
-
+tournament_players_tbl <- 
+  read_rds("tournament_players_tbl.rds")
 ```
 
-# Run Simulations
+# Run Simulations - non weighted recent form
 ```{r}
 adjusted_dk_pts_gained_sims_summarized <- 
   tournament_players_tbl %>%
@@ -91,410 +44,22 @@ adjusted_dk_pts_gained_sims_summarized_tbl %>%
   write_csv("simulation_results/adjusted_pts_gained_sims.csv")
 ```
 
+# All 2019 season sims with six-week and three-month weighted scores
 ```{r}
-# Sims vs. Actual
-
-adjusted_dk_pts_sims_with_actual_tbl <- 
-  adjusted_dk_pts_gained_sims_summarized_tbl %>%
-  left_join(
-    select(
-      dk_past_results,
-      player,
-      tournament_id,
-      final_position,
-      dk_total_fp
-    ),
-    by = c("tournament_id",
-      "player_name" = "player")
-  )
-
-write_csv(adjusted_dk_pts_sims_with_actual_tbl, "adjusted_dk_pts_sim_results.csv")
-
-```
-
-# Analyzing Results
-```{r}
-
-sims_with_actual_tbl <- read_csv("adjusted_dk_pts_sim_results.csv") %>% 
-  mutate(final_position = ifelse(is.na(final_position), 100, final_position)) %>% 
-  distinct()
-
-
-# Evaluating Top 20 Prob
-top_20_bins <-  c(-Inf, 10, 20, 30, 40, 50, 60, 70, 80, 90)
-top_20_labels <-  c("0%-10%", "10%-20%", "20%-30%", "30%-40%", "40%-50%", "50%-60%", "60%-70%", "70%-80%", "Over 80%")
-
-top_20_dk_tbl <- 
-  sims_with_actual_tbl %>% 
-  group_by(tournament_id) %>% 
-  mutate(actual_dk_point_rk = min_rank(-dk_total_fp)) %>%
-  ungroup() %>% 
-  mutate(actual_top_20_dk_finish = ifelse(actual_dk_point_rk <= 20, 1, 0),
-         top_20_prediction_range = cut(top20_dk, breaks = top_20_bins, labels = top_20_labels)) %>% 
-  select(top_20_prediction_range, actual_top_20_dk_finish)
-
-top_20_dk_tbl %>% 
-  group_by(top_20_prediction_range) %>% 
-  summarise(total_predicted = n(),
-            top_20_dk_finishes = sum(actual_top_20_dk_finish)
-            ) %>% 
-  mutate(actual_top20_percentage = top_20_dk_finishes/total_predicted) %>% 
-  ggplot(aes(top_20_prediction_range, actual_top20_percentage)) + 
-  geom_point() +
-  scale_y_continuous(breaks = seq(0, 1, .10), labels = scales::percent_format(accuracy = 1)) +
-  labs(x = "Predicted",
-       y = "Actual")
-```
-
-```{r}
-# Evaluating Top 10 Prob
-top_10_bins <-  top_5_bins <-  c(-Inf, 10,  20,  30, 40, 50, Inf)
-top_10_labels <-  c("0%-10%", "10%-20%", "20%-30%", "30%-40%", "40%-50%", "Over 50%")
-
-top_10_dk_tbl <- 
-  sims_with_actual_tbl %>% 
-  group_by(tournament_id) %>% 
-  mutate(actual_dk_point_rk = min_rank(-dk_total_fp)) %>%
-  ungroup() %>% 
-  mutate(actual_top_10_dk_finish = ifelse(actual_dk_point_rk <= 10, 1, 0),
-         top_10_prediction_range = cut(top10_dk, breaks = top_10_bins, labels = top_10_labels))
-
-top_10_dk_tbl %>% 
-  group_by(top_10_prediction_range) %>% 
-  summarise(total_predicted = n(),
-            top_10_dk_finishes = sum(actual_top_10_dk_finish)
-            ) %>% 
-  mutate(actual_top_10_percentage = top_10_dk_finishes/total_predicted) %>% 
-  ggplot(aes(top_10_prediction_range, actual_top_10_percentage)) + 
-  geom_point() +
-  scale_y_continuous(breaks = seq(0, .40, .10), labels = scales::percent_format(accuracy = 1)) +
-  labs(x = "Predicted",
-       y = "Actual")
-
-```
-
-
-```{r}
-# Evaluating Top 5 Prob
-top_5_bins <-  c(-Inf, 5, 10, 15, 20, 25, 30, 35, 40, Inf)
-top_5_labels <-  c("0%-5%", "5%-10%", "10%-15%", "15%-20%", "20%-25%", "25%-30%", "30%-35%", "35%-40%", "Over 40%")
-
-top_5_dk_tbl <- 
-  sims_with_actual_tbl %>% 
-  group_by(tournament_id) %>% 
-  mutate(actual_dk_point_rk = min_rank(-dk_total_fp)) %>%
-  ungroup() %>% 
-  mutate(actual_top_5_dk_finish = ifelse(actual_dk_point_rk <= 5, 1, 0),
-         top_5_prediction_range = cut(top5_dk, breaks = top_5_bins, labels = top_5_labels))
-
-top_5_dk_tbl %>% 
-  group_by(top_5_prediction_range) %>% 
-  summarise(total_predicted = n(),
-            top_5_dk_finishes = sum(actual_top_5_dk_finish)
-            ) %>% 
-  mutate(actual_top_5_percentage = top_5_dk_finishes/total_predicted) %>% 
-  ggplot(aes(top_5_prediction_range, actual_top_5_percentage)) + 
-  geom_point() +
-  scale_y_continuous(breaks = seq(0, .45, .05), labels = scales::percent_format(accuracy = 1)) +
-  labs(x = "Predicted",
-       y = "Actual")
-```
-
-```{r}
-weighted_sims_summarized <- 
+adjusted_dk_pts_gained_sims_summarized <- 
   tournament_players_tbl %>%
   select(data) %>% 
-  pmap(purrr::possibly(~ complete_simulation_framework(.x, three_month_weight = 1.10, six_month_weight = 1.05), otherwise = NA))
+  pmap(purrr::possibly(~ complete_simulation_framework(.x, cut_range = 70,six_week_weight = 1.6, three_month_weight = 1.30,
+                                                       six_month_weight = 1), otherwise = NA))
 
-weighted_sims_tbl <- 
-  weighted_sims_summarized %>% 
+adjusted_dk_pts_gained_sims_summarized_tbl <- 
+  adjusted_dk_pts_gained_sims_summarized %>% 
   enframe(value = "sims") %>% 
   unnest(sims)
-```
 
-```{r}
-# Sims vs. Actual
-
-adjusted_dk_pts_weighted_sims_with_actual_tbl <- 
-  weighted_sims_tbl %>%
-  left_join(
-    select(
-      dk_past_results,
-      player,
-      tournament_id,
-      final_position,
-      dk_total_fp
-    ),
-    by = c("tournament_id",
-      "player_name" = "player")
-  )
-
-write_csv(adjusted_dk_pts_weighted_sims_with_actual_tbl, "adjusted_dk_pts_weighted_sim_results.csv")
-
-```
-
-# Analyzing Results
-```{r}
-
-adjusted_dk_pts_weighted_sim_results <- read_csv("adjusted_dk_pts_weighted_sim_results.csv") %>% 
+adjusted_dk_pts_gained_sims_summarized_tbl %>%
   select(-name) %>% 
-  mutate(final_position = ifelse(is.na(final_position), 100, final_position)) %>% 
-  distinct()
-
-
-# Evaluating Top 20 Prob
-top_20_bins <-  c(-Inf, 10, 20, 30, 40, 50, 60, 70, Inf)
-top_20_labels <-  c("0%-10%", "10%-20%", "20%-30%", "30%-40%", "40%-50%", "50%-60%", "60%-70%", "Over 70%")
-
-top_20_dk_tbl <- 
-  adjusted_dk_pts_weighted_sim_results %>% 
-  group_by(tournament_id) %>% 
-  mutate(actual_dk_point_rk = min_rank(-dk_total_fp)) %>%
-  ungroup() %>% 
-  mutate(actual_top_20_dk_finish = ifelse(actual_dk_point_rk <= 20, 1, 0),
-         top_20_prediction_range = cut(top20_dk, breaks = top_20_bins, labels = top_20_labels))
-
-top_20_dk_tbl %>% 
-  group_by(top_20_prediction_range) %>% 
-  summarise(total_predicted = n(),
-            top_20_dk_finishes = sum(actual_top_20_dk_finish)
-            ) %>% 
-  mutate(actual_top20_percentage = top_20_dk_finishes/total_predicted) %>% 
-  ggplot(aes(top_20_prediction_range, actual_top20_percentage)) + 
-  geom_point() +
-  scale_y_continuous(breaks = seq(0, 1, .10), labels = scales::percent_format(accuracy = 1)) +
-  labs(x = "Predicted",
-       y = "Actual")
-```
-
-```{r}
-
-# Evaluating Top 10 Prob
-top_10_bins <-  c(-Inf, 10, 20, 30, 40, 50, Inf)
-top_10_labels <-  c("0%-10%", "10%-20%", "20%-30%", "30%-40%", "40%-50%", "Over 50%")
-
-top_10_dk_tbl <- 
-  adjusted_dk_pts_weighted_sim_results %>% 
-  group_by(tournament_id) %>% 
-  mutate(actual_dk_point_rk = min_rank(-dk_total_fp)) %>%
-  ungroup() %>% 
-  mutate(actual_top_10_dk_finish = ifelse(actual_dk_point_rk <= 10, 1, 0),
-         top_10_prediction_range = cut(top10_dk, breaks = top_10_bins, labels = top_10_labels))
-
-top_10_dk_tbl %>% 
-  group_by(top_10_prediction_range) %>% 
-  summarise(total_predicted = n(),
-            top_10_dk_finishes = sum(actual_top_10_dk_finish)
-            ) %>% 
-  mutate(actual_top10_percentage = top_10_dk_finishes/total_predicted) %>% 
-  ggplot(aes(top_10_prediction_range, actual_top10_percentage)) + 
-  geom_point() +
-  scale_y_continuous(breaks = seq(0, 1, .10), labels = scales::percent_format(accuracy = 1)) +
-  labs(x = "Predicted",
-       y = "Actual")
-```
-
-# Run on future tournaments
-```{r}
-valero <- read_csv("dr.csv") %>%
-  janitor::clean_names() %>%
-  rename(players = player) %>%
-  mutate(
-    players = case_when(
-      players == "Alex Noren" ~ "Alexander Noren",
-      players == "Robert Macintyre" ~ "Robert MacIntyre",
-      players == "Erik Van Rooyen" ~ "Erik van Rooyen",
-      players == "Rafa Cabrera Bello" ~ "Rafael Cabrera Bello",
-      players == "Seung-Yul Noh" ~ "Seung-yul Noh",
-      players == "Carlos Sainz" ~ "Carlos Sainz Jr.",
-      TRUE ~ players
-    )
-  )
-
-rounds_tbl <- 
-  tbl(con, "rounds_tbl") %>% 
-  group_by(player_name) %>% 
-  summarise(avg_tot_strokes = mean(tot_strokes)) %>% 
-  ungroup() %>% 
-  collect()
-
-valero %>% 
-  select(players) %>% 
-  left_join(rounds_tbl, by = c("players" = "player_name")) %>% 
-  View()
-
-date <- "2021-03-31"
-
-future_sim_function <- function(df, date) {
-  
-  plan(multisession, workers = 4)
-  
-  con <- dbConnect(drv = RPostgres::Postgres(), 
-                 user = "postgres", 
-                 password = keyring::key_get("postgres_db", "postgres"), 
-                 dbname = "golf_db",
-                 )
-  
-  tournament_players <-
-    df %>%
-    pull(players)
-  
-  end_date <- ymd(date)
-  
-  start_date <- end_date - days(365)
-  
-  # pull in holes data
-  holes_tbl <- 
-  tbl(con, "holes_tbl") %>%
-  filter(round != 5) %>% 
-  mutate(player_name = case_when(
-    player_name == "Ali Al-Shahrani" ~ "Ali Al Shahrani",
-    TRUE ~ player_name
-  )) %>%
-  filter(date %>% between(left = start_date,
-                          right = end_date)) %>% 
-  select(player_name, season:course_id, round, hole, score_type, dk_pts_classic, field_dk_classic_avg, dk_pts_gained_classic) %>% 
-  collect()
-  
-  # calculate total dk pts gained by each player in tournament/round combo
-  dk_pts_gained_rd <-
-    holes_tbl %>%
-    unite("tournament_round_id", c(tournament_id:round)) %>%
-    group_by(player_name, tournament_round_id) %>%
-    summarise(total_dk_pts_gained = sum(dk_pts_gained_classic)) %>%
-    ungroup() %>%
-    # lumping players together that have played less than 25 rounds in past year
-    mutate(player_name = fct_lump_min(player_name, 25)) %>%
-    # left_join(avg_dk_hole_score_by_tourney_rd_tbl) %>%
-    select(player_name, tournament_round_id, total_dk_pts_gained)
-  
-  # create dummy vars for all players and tournament/course/rd combo
-  course_rd_effect_recipe <-
-    recipe(~ ., data = dk_pts_gained_rd) %>%
-    step_dummy(all_nominal(), one_hot = TRUE)
-  
-  course_rd_effect_data <-
-    course_rd_effect_recipe %>% prep() %>% bake(new_data = NULL)
-  
-  # run course/field effects model
-  course_rd_effect_model <-
-    lm(total_dk_pts_gained ~ . , data = course_rd_effect_data)
-  
-  course_round_effect_tbl <-
-    tidy(course_rd_effect_model) %>%
-    filter(term %>% str_detect("tournament_round_id")) %>%
-    arrange(estimate) %>%
-    mutate(term = term %>% str_sub(22,-1)) %>%
-    select(tournament_round_id = term, course_rd_effect = estimate) %>%
-    mutate(course_rd_effect_per_hole = course_rd_effect / 18)
-  
-  #join holes data with course effects data, calculate adjusted dk points gained
-  adj_pts_gained_nested_tbl <-
-    holes_tbl %>%
-    filter(player_name %in% c(tournament_players)) %>% #148316
-    unite("tournament_round_id", c(tournament_id:round)) %>% 
-    left_join(course_round_effect_tbl, by = "tournament_round_id") %>%
-    # mutate(adj_field_dk_avg = field_dk_classic_avg - course_rd_effect) %>%
-    mutate(adj_dk_pts_gained = (dk_pts_gained_classic - course_rd_effect_per_hole)) %>%
-    filter(!adj_dk_pts_gained %>% is.na()) %>%
-    select(player_name, adj_dk_pts_gained) %>%
-    nest(pts_gained = -player_name)
-  
-  # run simulations for tournament
-    adj_pts_gained_nested_tbl %>%
-    pull(pts_gained) %>%
-    future_map(purrr::possibly( ~ player_adj_dk_gained_sim(.x, n = 10000), otherwise = NA)) %>%
-    enframe() %>%
-    bind_cols(select(adj_pts_gained_nested_tbl, player_name)) %>%
-    unnest(value) %>%
-    group_by(sim) %>%
-    mutate(rd_1_and_2_rank = min_rank(-dk_pts_gained_rds_1_2)) %>%
-    ungroup() %>%
-    mutate(dk_pts_gained_rds_3_4 = if_else(rd_1_and_2_rank > 65, 0, dk_pts_gained_rds_3_4)) %>%
-    mutate(dk_total_pts_gained = dk_pts_gained_rds_1_2 + dk_pts_gained_rds_3_4) %>%
-    group_by(sim) %>%
-    mutate(dk_pts_rank = min_rank(-dk_total_pts_gained)) %>%
-    ungroup()
-  
-}
-
-tournament_sims <- future_sim_function(valero, "2021-03-31")
-```
-
-
-
-```{r}
-# Sims Summarized
-sims_summarized <- 
-  tournament_sims %>%
-  group_by(player_name) %>%
-  summarise(
-    avg_dk_pts_gained = mean(dk_total_pts_gained),
-    win_dk = sum(dk_pts_rank == 1) / 10000 * 100,
-    top5_dk = sum(dk_pts_rank <= 5) / 10000 * 100,
-    top10_dk = sum(dk_pts_rank <= 10) / 10000 *100,
-    top20_dk = sum(dk_pts_rank <= 20) / 10000 * 100
-  ) %>%
-  arrange(desc(top20_dk)) %>%
-  ungroup() %>% 
-  left_join(select(valero, players, salary, ownership, points), by = c("player_name" = "players"))
-```
-#kft sim
-```{r}
-kft <- read_csv("kft.csv") %>% 
-  janitor::clean_names() %>% 
-  separate(player_name, into = c("last", "first"), sep = ",") %>% 
-  mutate(players = str_glue("{first} {last}") %>% str_trim()) %>% 
-  mutate(players = case_when(
-    players == "Yechun Yuan" ~ "Yechun Carl Yuan",
-    players == "Marty Dou Zecheng" ~ "Zecheng Dou",
-    players == "Dawie Van Der Walt" ~ "Dawie van der Walt",
-    players == "Paul Haley II" ~ "Paul D. Haley",
-    players == "Dan McCarthy" ~ "Daniel McCarthy",
-    players == "Sangmoon Bae" ~ "Sang-Moon Bae",
-    players == "Ben Silverman" ~ "Benjamin Silverman",
-    players == "Greg Yates" ~ "Gregory Yates", 
-    players == "Matt Oshrine" ~ "Matthew Oshrine",
-    TRUE ~ players
-  ))
-
-kft %>% 
-  select(player) %>% 
-  left_join(rounds_tbl, by = c("player" = "player_name")) %>% 
-  View()
-
-kft_sims <- future_sim_function(kft, "2021-03-31")
-```
-
-```{r}
-# Sims Summarized
-kft_summarized <- 
-  kft_sims %>%
-  group_by(player_name) %>%
-  summarise(
-    avg_dk_pts_gained = mean(dk_total_pts_gained),
-    win_dk = sum(dk_pts_rank == 1) / 10000 * 100,
-    top5_dk = sum(dk_pts_rank <= 5) / 10000 * 100,
-    top10_dk = sum(dk_pts_rank <= 10) / 10000 *100,
-    top20_dk = sum(dk_pts_rank <= 20) / 10000 * 100
-  ) %>%
-  arrange(desc(top20_dk)) %>%
-  ungroup() %>% 
-  left_join(select(kft, players, top_20), by = c("player_name" = "players"))
-```
-
-```{r}
-g1 <- 
-  sims_summarized %>% 
-  filter(salary %in% c(8000:11000)) %>% 
-  mutate(label = str_glue("Player: {player_name}
-                          Win %: {win_dk}
-                          Salary: {salary}
-                          Ownership: {ownership}")) %>% 
-  ggplot(aes(points, top10_dk)) +
-  geom_point(aes(size = ownership, text = label))
-
-ggplotly(g1)
-
+  mutate(sim_type = "adjusted_with_weighted_recent_form") %>% 
+  write_csv("simulation_results/adjusted_pts_gained_weighted_recent_form_sims.csv")
 ```
 
